--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>romantic involvement calc</title>
+        <title>romantic involvement planning calculator</title>
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
