--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
-<html>
+<html lang="en">
     <head>
-        <title>romantic involvement planning calculator</title>
+        <title>andris' website</title>
         <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
-        <div class="center-screen">
-            <div>if ur romantic involvement started on</div>
-            <input id="start_date" type="date" />
-            <div>congrats <3 ,</div>
-            <div>u can plan til <b id="end_date"></b></div>
-        </div>
-        <script src="./index.js"></script>
+        <main class="screen-margin">
+            <h2>my website :)</h2>
+            <h3>stuff</h3>
+            <ul>
+                <li>
+                    <a href="coplan/index.html">romantic involvement planning calculator</a>
+                </li>
+            </ul>
+        </main>
     </body>
 </html>
