--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
             <h3>stuff</h3>
             <ul>
                 <li>
-                    <a href="coplan/index.html">romantic involvement planning calculator</a>
+                    <a href="https://loupe.hu">loupe theatre co website</a>
+                </li>
+                <li>
+                    <a href="https://github.com/horvathandris">my github</a>
+                </li>
+                <li>
+                    <a href="coplan/index.html">
+                        romantic involvement planning calculator
+                    </a>
                 </li>
             </ul>
         </main>
